# perliner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: homebrew_llvm_mold.cmake  raygui.cmake  raylib.cmake  raylib_cpp.cmake
dep/: CMakeLists.txt  raygui.c
inc/: clamp.hpp  gui.hpp  noise2d.hpp  perlin.hpp
src/: CMakeLists.txt  clamp.cpp  gui.cpp  main.cpp  perlin.cpp
